// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterButton with default props match snapshot with default props 1`] = `
<button
  className="filter "
  data-active={false}
  disabled={false}
  onClick={[Function]}
  title=""
>
  <span
    className="badge"
  >
    0
  </span>
</button>
`;

exports[`FilterButton with props match snapshot with non-default props 1`] = `
<button
  className="filter filter1"
  data-active={true}
  disabled={true}
  onClick={[Function]}
  title="All"
>
  All
  <span
    className="badge"
  >
    7
  </span>
</button>
`;
